# mnist-mlp-cpp-gpu

./: CMakeLists.txt  Makefile  README.md  main.cpp  main_executable  mlp.cpp  mlp.h  mnist.h  neuron.cpp  neuron.h
src/: layer.cpp  layer.h  mlp.cpp
